<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/redCard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/redcardcolor"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/redCard"
        app:layout_constraintTop_toTopOf="@id/redCard" />

    <TextView
        android:id="@+id/txtSOSMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_to_contact_me"
        android:textColor="#FFF"
        app:layout_constraintEnd_toStartOf="@id/imgSOS"
        app:layout_constraintStart_toStartOf="@id/redCard"
        app:layout_constraintTop_toBottomOf="@id/txtSOS"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imgSOS"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/redCard"
        app:layout_constraintEnd_toEndOf="@id/redCard"
        app:layout_constraintTop_toTopOf="@id/redCard"
        tools:ignore="ImageContrastCheck, ContentDescription" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/greenCard"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/greencardcolor"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/redCard" />

    <TextView
        android:id="@+id/txtGUARD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/greenCard"
        app:layout_constraintTop_toTopOf="@id/greenCard"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtGUARDMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/open_when_you_are_potentially_on_a_dangerous_journey"
        android:textColor="#FFF"
        app:layout_constraintEnd_toStartOf="@id/imgGUARD"
        app:layout_constraintStart_toStartOf="@id/greenCard"
        app:layout_constraintTop_toBottomOf="@id/txtGUARD"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imgGUARD"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/greenCard"
        app:layout_constraintEnd_toEndOf="@id/greenCard"
        app:layout_constraintTop_toTopOf="@id/greenCard"
        tools:ignore="ImageContrastCheck, ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>