<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="12dp"
    android:background="@color/black"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/homecardcolor"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/vivek_balani"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgUser"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/flat_no_405_white_house_apt_near_jhulelal_trust_school_ulhasnagar_2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_8_30"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name" />


        <LinearLayout
            android:id="@+id/lin_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rounded_rect"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lin_distance"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/imgUser"
            app:layout_constraintTop_toBottomOf="@id/imgUser">

            <ImageView
                android:id="@+id/img_battery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_battery"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/battery_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_90"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/lin_wifi"
            app:layout_constraintStart_toEndOf="@id/lin_battery"
            app:layout_constraintTop_toBottomOf="@id/imgUser"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_distance"
                android:layout_width="16dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_send"
                app:layout_constraintStart_toEndOf="@id/battery_percent"
                app:layout_constraintTop_toBottomOf="@id/imgUser"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_223m"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_distance"
                app:layout_constraintTop_toTopOf="@id/img_battery" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/img_call"
            app:layout_constraintStart_toEndOf="@id/lin_distance"
            app:layout_constraintTop_toBottomOf="@id/imgUser"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/img_wifi"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_wifi"
                app:tint="@color/black"
                app:layout_constraintStart_toEndOf="@id/distance_value"
                app:layout_constraintTop_toBottomOf="@id/imgUser"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/wifi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/wifi"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_wifi"
                app:layout_constraintTop_toTopOf="@id/img_battery" />
        </LinearLayout>


        <ImageView
            android:id="@+id/img_call"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_circle"
            android:padding="8dp"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@id/lin_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lin_battery"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>